--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-  <body>
-    <h1>Hello, this came from git</h1>
-    <p>This is slightly updated...</p>
-  </body>
+<head>
+	<title>IcePekoe Contact Manager</title>
+	<script type="text/javascript" src="js/md5.js"></script>
+	<script type="text/javascript" src="js/code.js"></script>
+    <link href="css/styles.css" rel="stylesheet">	
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+</head>
+<body>
+
+<h1 id="title">IcePekoe Contact Manager</h1>
+
+<div id="loginDiv">
+	<span id="inner-title">Please Log In</span>
+	<input type="text" id="loginName" placeholder="Username" /><br />
+	<input type="password" id="loginPassword" placeholder="Password"/><br />
+	<button type="button" id="loginButton" class="buttons" onclick="doLogin();">Login</button>
+	<span id="loginResult"></span>
+</div>
+
+</body>
 </html>
