--- a/index.html
+++ b/index.html
@@ -4,20 +4,32 @@
 	<title>IcePekoe Contact Manager</title>
 	<script type="text/javascript" src="js/md5.js"></script>
 	<script type="text/javascript" src="js/code.js"></script>
-    <link href="css/styles.css" rel="stylesheet">	
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
 
 <h1 id="title">IcePekoe Contact Manager</h1>
 
-<div id="loginDiv">
-	<span id="inner-title">Please Log In</span>
-	<input type="text" id="loginName" placeholder="Username" /><br />
-	<input type="password" id="loginPassword" placeholder="Password"/><br />
-	<button type="button" id="loginButton" class="buttons" onclick="doLogin();">Login</button>
-	<span id="loginResult"></span>
+<div>
+	<div id="loginDiv">
+		<span id="inner-title">Please login</span>
+		<input type="text" id="user" placeholder="Username" /><br />
+		<input type="password" id="password" placeholder="Password"/><br />
+		<button type="button" id="loginButton" class="buttons" onclick="doLogin();">Login</button>
+		<span id="loginResult"></span>
+	</div>
+
+	<div id="registerDiv">
+		<span id="inner-title">Let's get started!</span>
+		<input type="text" id="fname" placeholder="First Name" /><br />
+		<input type="text" id="lname" placeholder="Last Name"/><br />
+		<input type="text" id="newUser" placeholder="Username" /><br />
+		<input type="password" id="newPassword" placeholder="Password"/><br />
+		<button type="button" id="registerButton" class="buttons" onclick="register();">Sign Up</button>
+		<span id="registerResult"></span>
+	</div>
 </div>
+
 
 </body>
 </html>
