--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <h1 id="title">IcePekoe Contact Manager</h1>
 
-<div>
+<div id="loginRegisterDiv">
 	<div id="loginDiv">
 		<span id="inner-title">Please login</span>
 		<input type="text" id="user" placeholder="Username" /><br />
