--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 <div id="loginRegisterDiv">
 	<div id="loginDiv">
 		<span id="inner-title">Please login</span>
-		<input type="text" id="user" placeholder="Username" /><br />
-		<input type="password" id="password" placeholder="Password"/><br />
+		<input class="InputBox" type="text" id="user" placeholder="Username" /><br />
+		<input class="InputBox" type="password" id="password" placeholder="Password"/><br />
 		<button type="button" id="loginButton" class="buttons" onclick="doLogin();">Login</button>
 		<span id="loginResult"></span>
 	</div>
 
 	<div id="registerDiv">
 		<span id="inner-title">Let's get started!</span>
-		<input type="text" id="fname" placeholder="First Name" /><br />
-		<input type="text" id="lname" placeholder="Last Name"/><br />
-		<input type="text" id="newUser" placeholder="Username" /><br />
-		<input type="password" id="newPassword" placeholder="Password"/><br />
+		<input class="InputBox" type="text" id="fname" placeholder="First Name" /><br />
+		<input class="InputBox" type="text" id="lname" placeholder="Last Name"/><br />
+		<input class="InputBox" type="text" id="newUser" placeholder="Username" /><br />
+		<input class="InputBox" type="password" id="newPassword" placeholder="Password"/><br />
 		<button type="button" id="registerButton" class="buttons" onclick="register();">Sign Up</button>
 		<span id="registerResult"></span>
 	</div>
