css again again

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div id="loginRegisterDiv">
 	<div id="loginDiv">
-		<span id="inner-title">Please login</span>
+		<p id="inner-title">Please login</p>
 		<input class="InputBox" type="text" id="user" placeholder="Username" /><br />
 		<input class="InputBox" type="password" id="password" placeholder="Password"/><br />
 		<button type="button" id="loginButton" class="buttons" onclick="doLogin();">Login</button>
@@ -20,7 +20,7 @@
 	</div>
 
 	<div id="registerDiv">
-		<span id="inner-title">Let's get started!</span>
+		<p id="inner-title">Let's get started!</p>
 		<input class="InputBox" type="text" id="fname" placeholder="First Name" /><br />
 		<input class="InputBox" type="text" id="lname" placeholder="Last Name"/><br />
 		<input class="InputBox" type="text" id="newUser" placeholder="Username" /><br />
