--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<p id="inner-title">Please login</p>
 		<input class="InputBox" type="text" id="user" placeholder="Username" /><br />
 		<input class="InputBox" type="password" id="password" placeholder="Password"/><br />
-		<button type="button" id="loginButton" class="buttons" onclick="doLogin();">Login</button>
+		<button type="button" id="loginButton" class="Button" onclick="doLogin();">Login</button>
 		<span id="loginResult"></span>
 	</div>
 
@@ -25,7 +25,7 @@
 		<input class="InputBox" type="text" id="lname" placeholder="Last Name"/><br />
 		<input class="InputBox" type="text" id="newUser" placeholder="Username" /><br />
 		<input class="InputBox" type="password" id="newPassword" placeholder="Password"/><br />
-		<button type="button" id="registerButton" class="buttons" onclick="register();">Sign Up</button>
+		<button type="button" id="registerButton" class="Button" onclick="register();">Sign Up</button>
 		<span id="registerResult"></span>
 	</div>
 </div>
