add control div

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <h1 id="title">IcePekoe Contact Manager</h1>
 
 <div id="loginRegisterDiv">
+
+	<div id="controlDiv">
+		<button class="Options" id="loginOption">Login</button>
+		<button class="Options" id="registerOption">Register</button>
+	</div>
+
 	<div id="loginDiv">
 		<p id="inner-title">Please login</p>
 		<input class="InputBox" type="text" id="user" placeholder="Username" /><br />
