change class names

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <div id="loginRegisterDiv">
 
 	<div id="controlDiv">
-		<button class="Options" id="loginOption" onclick="showLogin()">Login</button>
-		<button class="Options" id="registerOption" onclick="showRegister()">Register</button>
+		<button class="Selected" id="loginOption" onclick="showLogin()">Login</button>
+		<button class="Unselected" id="registerOption" onclick="showRegister()">Register</button>
 	</div>
 
 	<div id="loginDiv">
