added black paragraphs

--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
 		<input class="InputBox" type="text" id="user" placeholder="Username" /><br />
 		<input class="InputBox" type="password" id="password" placeholder="Password"/><br />
 		<button type="button" id="loginButton" class="Button" onclick="doLogin();">Login</button>
-		<span id="loginResult"></span>
+		<p id="loginResult"></p>
 	</div>
 
 	<div id="registerDiv">
 		<input class="InputBox" type="text" id="fname" placeholder="First Name" /><br />
 		<input class="InputBox" type="text" id="lname" placeholder="Last Name"/><br />
 		<input class="InputBox" type="text" id="newUser" placeholder="Username" /><br />
+		<p></p>
 		<input class="InputBox" type="password" id="newPassword" placeholder="Password"/><br />
+		<p></p>
 		<button type="button" id="registerButton" class="Button" onclick="register();">Sign Up</button>
-		<span id="registerResult"></span>
+		<p id="registerResult"></p>
 	</div>
 </div>
-
 
 </body>
 </html>
