adding quotes teehee

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 		let userAvailable = document.getElementById("userAvailable");
 
 		newUser.onfocus = function () {
-			usernameRequirementsDiv.style.display = block;
+			usernameRequirementsDiv.style.display = "block";
 		}
 
 		newUser.onblur = function () {
-			usernameRequirementsDiv.style.display = none;
+			usernameRequirementsDiv.style.display = "none";
 		}
 
 		newUser.onkeypress = function () {
@@ -109,11 +109,11 @@
 		let passwordContains = document.getElementById("passwordContains");
 
 		newPassword.onfocus = function () {
-			passwordRequirementsDiv.style.display = block;
+			passwordRequirementsDiv.style.display = "block";
 		}
 
 		newPassword.onblur = function () {
-			passwordRequirementsDiv.style.display = none;
+			passwordRequirementsDiv.style.display = "none";
 		}
 
 		newPassword.onkeypress = function () {
