--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>IcePekoe Contact Manager</title>
-	<script type="text/javascript" src="js/md5.js"></script>
+	<!--<script type="text/javascript" src="js/md5.js"></script>-->
 	<script type="text/javascript" src="js/code.js"></script>
     <link href="css/styles.css" rel="stylesheet">
 </head>
@@ -48,7 +48,7 @@
 		</div>
 	</div>
 
-	<script>
+	<script type="text/javascript" src="js/code.js">
 		var userReqsNotMet = 3;
 		var passwordReqsNotMet = 2;
 
