--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="js/code.js">
+	<script>
 		var userReqsNotMet = 3;
 		var passwordReqsNotMet = 2;
 
