--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 		//password validation
 		let newPassword = document.getElementById("newPassword");
-		let passwordRequirementsDiv = document.getElementById("passwordRequirmentsDiv");
+		let passwordRequirementsDiv = document.getElementById("passwordRequirementsDiv");
 		let passwordLegthReq = document.getElementById("passwordLengthReq");
 		let passwordContains = document.getElementById("passwordContains");
 
