debug message for onkeyup

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 		}
 
 		newUser.onkeyup = function () {
+
+			console.log("running onkeyup...");
+
 			var allowed = /[0-9A-Za-z]/g;
 			var reqCounter = 0;
 
