change debug (again)

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 				userAvailable.className = "invalid";
 				reqCounter++;
 			} else {
+				console.log("Making valid...");
 				userAvailable.className = "valid";
 			}
 
