--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
 				userContains.className = "valid";
 			}
 
+			console.log(isAvailable(newUser.value));
+
 			//Check availability
 			if (!isAvailable(newUser.value)) {
 				//isn't available
