please work man

--- a/index.html
+++ b/index.html
@@ -52,8 +52,6 @@
 		var userReqsNotMet = 3;
 		var passwordReqsNotMet = 2;
 
-		var available = {value: false};
-
 		//Username validation
 		let newUser = document.getElementById("newUser");
 		let usernameRequirementsDiv = document.getElementById("usernameRequirementsDiv");
@@ -73,8 +71,6 @@
 			var allowed = /^[0-9A-Za-z]*$/;
 			var reqCounter = 0;
 
-			//Run availability check pre-emptively.
-			isAvailable(newUser.value, available);
 			//Check length
 			if (newUser.value.length < 3 || newUser.value.length > 20) {
 				//too short or too long
@@ -96,15 +92,7 @@
 			}
 
 			//Check availability
-			if (!(available.value)) {
-				//isn't available
-				console.log("Making invalid...");
-				userAvailable.className = "invalid";
-				reqCounter++;
-			} else {
-				console.log("Making valid...");
-				userAvailable.className = "valid";
-			}
+			isAvailable(newUser.value, userAvailable);
 
 			userReqsNotMet = reqCounter;
 			checkButtonState();
