--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
-<body onload="showLogin()">
+<body onload="setup()">
 
 	<h1 id="title">IcePekoe Contact Manager</h1>
 
