fix ensable -> enable typo

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				disable(document.getElementById("registerButton"));
 			} else {
 				//Requirements met, allow submission
-				ensable(document.getElementById("registerButton"));
+				enable(document.getElementById("registerButton"));
 			}
 		}
 
